# deepin-mcp-servers

./: .gitignore  BROWSER_GUIDE.md  README.md  eclipse_ai_assistant_prompt.md  eclipse_ai_ultra_compact.md  pyproject.toml  setup_browser.sh  start_mcp.sh
src/deepin_mcp_server/: server.py
src/deepin_mcp_server/dbus_service/: services.py
src/deepin_mcp_server/system_tools/: browser_control.py  file_operation.py  git_operations.py  system_control.py  terminal_command.py
src/deepin_mcp_server/web_service/: services.py  utils.py
src/deepin_mcp_server/web_service/web_search/: base.py  search.py  search_types.py  util.py
src/deepin_mcp_server/web_service/web_search/engines/: baidu.py  bing.py  duckduckgo.py  google.py  sogou.py
